--- a/service.html
+++ b/service.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FreshStartIO | Professional Home Improvement Services</title>
+    <meta
+      name="description"
+      content="FreshStartIO offers professional home upgrades: interior/exterior painting, deck building, tile, and drywall repair. Elevate your Delaware home with quality craftsmanship. Free estimates!"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -65,7 +69,7 @@
               d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
             />
           </svg>
-          <span class="white">302-723-4797 </span>
+          <span>302-723-4797 </span>
         </div>
       </div>
     </header>
@@ -103,7 +107,7 @@
         </li>
         <li class="menu-links"><a href="about-us.html">About Us</a></li>
         <li class="menu-links">
-          <a href="tel+3027234797 " class="cta-link">Free Estimate</a>
+          <a href="tel:+3027234797" class="cta-link" target="_blank">Free Estimate</a>
         </li>
       </ul>
     </nav>
@@ -115,14 +119,19 @@
         </p>
       </div>
     </section>
-    <div class="container">
-      <h2 class="mb-4 text-center">Comprehensive Home Improvement Solutions</h2>
-      <p class="text-center">
+    <section>
+<section>
+  <div class="container">
+      <h2 class="mb-4  prm-color">Comprehensive Home Improvement Solutions</h2>
+      <p class="text-service">
         At FreshStartIO, we provide a full range of professional home
         improvement services to transform your living spaces. Our experienced
         team delivers exceptional results with attention to detail and quality
         materials.
       </p>
+  </div>
+</section>
+    <div class="container">
       <section class="services-grid">
         <div class="service-card">
           <div
@@ -200,15 +209,11 @@
         </div>
       </section>
     </div>
-    <section class="cta-section">
+    <section class="cta-section grey">
       <div class="container">
-        <h2>Ready to Transform Your Space?</h2>
-        <p class="mb-6">
-          Contact us today for a free estimate on your home improvement project.
-        </p>
-        <a href="about-us.html" class="primary-btn"
-          >Get Your Free Estimate</a
-        >
+        <h4>Let’s Make Your Vision a Reality</h4>
+        <p class="mb-6 white">Call Now for a Free Estimate!</p>
+        <a href="tel:+3027234797" class="secondary-btn">Call Now</a>
       </div>
     </section>
     <footer id="main-footer">
@@ -238,8 +243,8 @@
         </div>
         <div class="footer-links">
           <a href="about-us.html">About Us</a>
-          <a href="service.html">Services</a>
-          <a href="index.html">Contact</a>
+          <a href="services.html">Services</a>
+          <a href="tel:+3027234797">Contact</a>
         </div>
         <div class="flexbox-center social-wrapper mg-right-one">
           <a href="https://www.facebook.com/" aria-label="Facebook">
@@ -253,7 +258,7 @@
             />
           </a>
           <a
-            href="https://www.instagram.com/"
+            href="https://www.instagram.com/freshstartio/"
             aria-label="Instagram"
             target="_blank"
           >
